book-import/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: open-education
  name: open-education
spec:
  replicas: 2
  selector:
    matchLabels:
      name: open-education
  template:
    metadata:
      labels:
        name: open-education
    spec:
      containers:
      - image: quay.io/psehgaft/open-education:1.0
        name: open-education
        ports:
        - containerPort: 8080
          name: http-server
