book-import/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-education
  labels:
    name: open-education
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: open-education
