book-import/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: open-education
  labels:
    name: open-education
spec:
  path: "/"
  to:
    kind: Service
    name: open-education
